--- a/exercises/web-script-iptable/host-app/package.json
+++ b/exercises/web-script-iptable/host-app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "iconify-icon": "^1.0.8"
+    "iconify-icon": "^1.0.8",
+    "uuid": "^9.0.1"
   }
 }
