--- a/classnotes/express/hello/package.json
+++ b/classnotes/express/hello/package.json
@@ -1,5 +1,9 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
+  },
   "dependencies": {
     "express": "^4.18.2"
   }
