--- a/classnotes/express/system-call/package.json
+++ b/classnotes/express/system-call/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ping": "^0.4.4"
   }
 }
