--- a/projects/monitor-app/backend/package.json
+++ b/projects/monitor-app/backend/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^5.6.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ping": "^0.4.4"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
